Fixed copyright icon layout issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -415,8 +415,8 @@ body {
 }
 
 .copyright-icon {
-    font-size: 0.40rem;
-    margin-right: 0.25rem;
+    font-size: 0.5rem;
+    margin: 0.05rem 0.25rem 0 0;
 }
 
 .subpage-section {
